--- a/templates/macros/head.html
+++ b/templates/macros/head.html
@@ -100,11 +100,11 @@
   <meta property="og:locale" content="{{ config.extra.open.og_locale }}">
 {% endif %}
 
-{% if config.extra.plausible %}
-<script src="https://plausible.io/js/script.js" data-domain="{{ config.base_url | safe }}" async defer></script>
+{% if config.extra.plausible.enabled %}
+<script src="https://plausible.io/js/script.js" data-domain="{{ config.extra.plausible.domain | safe }}" async defer></script>
 {% endif %}
 
-{% if config.extra.unpoly %}
+{% if config.extra.unpoly.enabled %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/unpoly@3.6.1/unpoly.min.css">
 <script src="https://cdn.jsdelivr.net/npm/unpoly@3.6.1/unpoly.min.js" async defer></script>
 <script>
