--- a/templates/macros/head.html
+++ b/templates/macros/head.html
@@ -71,7 +71,7 @@
       <meta property="twitter:image" content="{{ get_url(path=image) | safe }}">
     {% endfor %}
   {% elif config.extra.open.image %}
-    <meta name="twitter:image" content="{{ config.base_url | safe }}/{{ config.extra.open.image }}">
+    <meta name="twitter:image" content="{{ config.base_url | safe }}/{{ config.extra.open.image | safe }}">
   {% endif %}
   <meta name="twitter:title" content="{{ title }}">
   <meta name="twitter:description" content="{{ description }}">
@@ -92,7 +92,7 @@
       <meta property="og:image" content="{{ get_url(path=image) | safe }}">
     {% endfor %}
   {% elif config.extra.open.image %}
-    <meta property="og:image" content="{{ config.base_url | safe }}/{{ config.extra.open.image }}">
+    <meta property="og:image" content="{{ config.base_url | safe }}/{{ config.extra.open.image | safe }}">
   {% endif %}
 
   <meta property="og:updated_time" content="{{ updated_time }}">
