--- a/templates/blog/page.html
+++ b/templates/blog/page.html
@@ -1,5 +1,7 @@
 {# Default page template used for blog contents #}
 
+{% import 'macros/show-comments.html' as macros_comments -%}
+
 {% extends "page.html" %}
 
 {% block seo %}
@@ -7,6 +9,7 @@
   {% set_global current_section = 'blog' %}
   {{ super() }}
 {% endblock seo %}
+
 
 {% block body %}
   {% set page_class = "blog single" %}
@@ -31,6 +34,9 @@
           {% if page.extra.lead %}<p class="lead">{{ page.extra.lead | safe }}</p>{% endif %}
           {{ page.content | safe }}
         </article>
+        {% if page.extra.comments %}
+          {{ macros_comments::show_comments() }}
+        {% endif %}
       </div>
     </div>
   </div>
