whole site revamped!

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,11 +16,13 @@
         background: radial-gradient(#7e7e7e95 1px, transparent 0);
         background-size: 20px 20px;
     }
+
     .brutal-box {
         border: 2px solid black;
         box-shadow: 12px 12px 0 #000;
-        background-color:rgb(250, 247, 247);
+        background-color: rgb(250, 247, 247);
     }
+
     li a {
         text-decoration: underline;
     }
@@ -31,8 +33,7 @@
         <main class="max-w-xl mx-auto">
             <header class="text-left px-8 pb-8 pt-10 flex items-center gap-x-4">
                 <div class="relative w-[56px] h-[56px] rounded-full overflow-hidden">
-                    <img src="/lance.png" alt="Profile"
-                        class="w-full h-full" />
+                    <img src="/lance.png" alt="Profile" class="w-full h-full" />
                     <div class="absolute inset-0 rounded-full z-10 inset-shadow-xs inset-shadow-slate-200"></div>
                 </div>
                 <div class="space-y-0.5">
