--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@300;400;500&display=swap" rel="stylesheet" />
-    <script src="https://unpkg.com/@tailwindcss/browser@4.0.17/dist/index.global.js"></script>
+    <script src="/tailwindcss-browser-4.0.17.index.js"></script>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 
@@ -32,8 +32,8 @@
     <div class="overflow-hidden rounded-sm brutal-box">
         <main class="max-w-xl mx-auto">
             <header class="text-left px-8 pb-8 pt-10 flex items-center gap-x-4">
-                <div class="relative w-[56px] h-[56px] rounded-full overflow-hidden">
-                    <img src="/lance.png" alt="Profile" class="w-full h-full" />
+                <div class="relative w-[86px] h-[86px] rounded-full overflow-hidden">
+                    <img src="/images/lance_ears.jpg" alt="Profile" class="w-full h-full" />
                     <div class="absolute inset-0 rounded-full z-10 inset-shadow-xs inset-shadow-slate-200"></div>
                 </div>
                 <div class="space-y-0.5">
