--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="{{ get_url(path='style.css', cachebust=true) }}">
 
-    {%- if page.extra.image -%}
+    {% if page.extra.image -%}
     <meta property="og:title" content="{{ page.title | safe }}">
     <meta property="og:description" content="{{ page.description | safe }}">
     <meta property="og:type" content="article">
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ page.title | safe }}">
     <meta name="twitter:description" content="{{ page.description | safe }}">
-    <meta name="twitter:image" content="{{ config.base_url | safe }}/{{ page.extra.image | safe }}">
+    <meta name="twitter:image" content="{{ config.base_url | safe }}{{ page.extra.image | safe }}">
     <meta name="twitter:site" content="@{{ config.extra.twitter }}">
     <meta name="twitter:creator" content="@{{ config.extra.twitter }}">
     <link rel="canonical" href="{{ config.base_url | safe }}/{{ page.slug | safe }}">
