craps blog post and home page update

--- a/templates/home.html
+++ b/templates/home.html
@@ -26,6 +26,10 @@
     li a {
         text-decoration: underline;
     }
+
+    p a {
+        text-decoration: underline;
+    }
 </style>
 
 <body class="text-slate-900 min-h-screen flex items-center justify-center font-[Inter_Tight,sans-serif]">
@@ -57,6 +61,9 @@
                 <p>
                     I like 3D printing and CAD, computer vision, genAI, Python,
                     gardening, baking, and camping with my family.
+                </p>
+                <p>
+                    If you like playing Craps, check out my <a href="https://craps.lfglance.dev" target="_blank">web app</a> and <a href="/blog/craps">blog post.</a>
                 </p>
 
                 <ul>
